--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Will you be my Valentine?</title>
-
-  <!-- Confetti library (lightweight) -->
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+  <title>For You 💗</title>
 
   <style>
     :root { --yesScale: 1; }
@@ -22,83 +19,101 @@
       overflow:hidden;
     }
 
-    /* Floating hearts background */
-    .hearts{
+    /* Moving fairy background */
+    .fairies{
       position:fixed;
       inset:0;
       pointer-events:none;
-      overflow:hidden;
       z-index:0;
+      overflow:hidden;
     }
-
-    .heart-float{
+    .fairy{
       position:absolute;
       bottom:-60px;
-      font-size:22px;
-      opacity:.65;
+      font-size:28px;
+      opacity:.7;
       animation: floatUp linear infinite;
-      filter: blur(.2px);
+      filter: drop-shadow(0 10px 12px rgba(0,0,0,.12));
     }
-
     @keyframes floatUp{
-      from { transform: translateY(0) translateX(0) rotate(0deg); opacity: .0; }
-      10% { opacity: .65; }
-      to { transform: translateY(-120vh) translateX(40px) rotate(18deg); opacity: 0; }
+      from { transform: translateY(0) translateX(0) rotate(0deg); opacity: 0; }
+      12% { opacity: .75; }
+      to { transform: translateY(-120vh) translateX(55px) rotate(14deg); opacity: 0; }
     }
 
-    /* Card */
+    /* Main card behind modals */
     .card{
       position:relative;
       z-index:1;
-      background: rgba(255,255,255,.92);
-      backdrop-filter: blur(8px);
-      padding:28px 22px;
-      border-radius:18px;
-      box-shadow: 0 16px 60px rgba(0,0,0,.16);
-      max-width:440px;
-      width:92%;
-      text-align:center;
-      transform: translateY(10px);
-      animation: popIn .6s ease forwards;
+      background: rgba(255,255,255,.9);
+      backdrop-filter: blur(10px);
       border: 1px solid rgba(255,45,85,.18);
+      padding:20px 18px;
+      border-radius:18px;
+      width:min(520px, 92vw);
+      box-shadow: 0 18px 70px rgba(0,0,0,.14);
+      text-align:center;
+    }
+    .title{
+      font-weight:900;
+      color:#ff2d55;
+      margin:0 0 6px;
+      letter-spacing:.2px;
+    }
+    .sub{
+      margin:0;
+      color:#444;
     }
 
+    /* Modal */
+    .overlay{
+      position:fixed;
+      inset:0;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      background: rgba(0,0,0,.45);
+      padding:18px;
+      z-index:10;
+    }
+
+    .modal{
+      width:min(520px, 95vw);
+      background:white;
+      border-radius:18px;
+      padding:22px 18px;
+      box-shadow: 0 24px 80px rgba(0,0,0,.25);
+      animation: popIn .22s ease forwards;
+      text-align:center;
+    }
     @keyframes popIn{
-      from { opacity:0; transform: translateY(16px) scale(.98); }
+      from { opacity:0; transform: translateY(12px) scale(.98); }
       to { opacity:1; transform: translateY(0) scale(1); }
     }
 
-    .badge{
-      display:inline-block;
-      padding:6px 12px;
-      border-radius:999px;
-      font-weight:700;
-      font-size:.9rem;
-      background: rgba(255,45,85,.1);
-      color:#ff2d55;
-      margin-bottom:10px;
+    .emoji{
+      font-size:2rem;
+      margin-bottom:8px;
     }
 
-    h1{
-      margin:6px 0 8px;
-      font-size:1.75rem;
-      letter-spacing:.2px;
+    h2{
+      margin:0 0 10px;
+      font-size:1.35rem;
     }
-
     p{
-      margin:0 0 18px;
-      color:#444;
-      line-height:1.45;
+      margin:0 0 14px;
+      line-height:1.5;
+      color:#333;
     }
 
     .buttons{
-      position:relative;
       display:flex;
       gap:12px;
       justify-content:center;
-      align-items:center;
       flex-wrap:wrap;
-      margin-top:10px;
+      margin-top:6px;
+      position:relative;
+      min-height:54px;
     }
 
     button{
@@ -106,220 +121,255 @@
       cursor:pointer;
       padding:12px 18px;
       border-radius:14px;
-      font-weight:800;
+      font-weight:900;
       font-size:1rem;
-      transition: transform 160ms ease, box-shadow 160ms ease;
       user-select:none;
       -webkit-tap-highlight-color: transparent;
+      transition: transform 160ms ease, box-shadow 160ms ease;
     }
-
     button:active{ transform: scale(.98); }
 
-    #yesBtn{
+    .yes{
       background: linear-gradient(135deg, #ff2d55, #ff5c8a);
       color:white;
-      transform: scale(var(--yesScale));
-      min-width:120px;
-      box-shadow: 0 12px 28px rgba(255,45,85,.25);
+      box-shadow: 0 14px 34px rgba(255,45,85,.25);
     }
-
-    #yesBtn:hover{ box-shadow: 0 16px 34px rgba(255,45,85,.32); }
-
-    #noBtn{
+    .no{
       background:#f1f1f3;
       color:#333;
-      min-width:120px;
-      box-shadow: 0 10px 22px rgba(0,0,0,.08);
-      position:relative;
+      box-shadow: 0 10px 24px rgba(0,0,0,.08);
+    }
+
+    /* YES scaling for valentine question */
+    #valYesBtn{
+      transform: scale(var(--yesScale));
+      transform-origin: center;
     }
 
     .hint{
-      font-size:.95rem;
+      margin-top:10px;
       color:#666;
-      margin-top:12px;
+      font-size:.95rem;
       min-height:1.2em;
     }
 
-    /* Modal */
-    .overlay{
-      position:fixed;
-      inset:0;
-      display:none;
-      align-items:center;
-      justify-content:center;
-      background: rgba(0,0,0,.48);
-      padding:18px;
-      z-index:10;
-    }
-
-    .modal{
-      background:white;
-      border-radius:18px;
-      padding:22px 18px;
-      max-width:440px;
-      width:100%;
-      text-align:center;
-      box-shadow: 0 20px 70px rgba(0,0,0,.25);
-      animation: modalIn .25s ease forwards;
-    }
-
-    @keyframes modalIn{
-      from { transform: translateY(10px) scale(.98); opacity:0; }
-      to { transform: translateY(0) scale(1); opacity:1; }
-    }
-
-    .modal h2{ margin:0 0 10px; }
-    .modal p{ margin:0 0 14px; }
-
-    .closeBtn{
-      background:#111;
-      color:#fff;
-      border-radius:12px;
-      padding:12px 18px;
-      font-weight:800;
-      width: 160px;
-    }
-
-    .tiny{
-      font-size:.85rem;
+    .footerNote{
+      margin-top:10px;
       color:#777;
-      margin-top:12px;
+      font-size:.85rem;
+    }
+
+    /* Final photo styling */
+    .finalPhoto{
+      width:100%;
+      max-height:300px;
+      object-fit:cover;
+      border-radius:16px;
+      box-shadow: 0 16px 45px rgba(0,0,0,.18);
+      margin: 10px 0 12px;
+      display:block;
     }
   </style>
 </head>
 
 <body>
-  <!-- floating hearts -->
-  <div class="hearts" id="hearts"></div>
+  <div class="fairies" id="fairies"></div>
 
   <div class="card">
-    <div class="badge">💌 Secret Message</div>
-    <h1>Will you be my Valentine? 💘</h1>
-    <p>I have a very important question… and you must answer honestly 😌</p>
-
-    <div class="buttons" id="btnArea">
-      <button id="yesBtn">YES 💖</button>
-      <button id="noBtn">NO 🙃</button>
-    </div>
-
-    <div class="hint" id="hint"></div>
-    <div class="tiny">Tip: try pressing “NO” 👀</div>
+    <h1 class="title">Open the surprise 💗</h1>
+    <p class="sub">Tap the buttons to continue.</p>
   </div>
 
+  <!-- Modal overlay -->
   <div class="overlay" id="overlay" role="dialog" aria-modal="true">
     <div class="modal">
-      <h2 id="modalTitle">YAY!!! 💖</h2>
-      <p id="modalText">You just made me the happiest person. Happy Valentine’s! 💐</p>
-      <button id="closeBtn" class="closeBtn">Close</button>
+      <div class="emoji" id="mEmoji">💌</div>
+      <h2 id="mTitle">I have something to share…</h2>
+      <div id="mTextWrap">
+        <p id="mText">Are you free right now?</p>
+      </div>
+
+      <div class="buttons" id="mButtons"></div>
+      <div class="hint" id="hint"></div>
+      <div class="footerNote" id="note"></div>
     </div>
   </div>
 
-  <!-- Optional music (add song.mp3 next to index.html) -->
-  <audio id="bgMusic" preload="auto">
+  <!-- ✅ Music file: put song.mp3 in the SAME folder as index.html -->
+  <audio id="bgMusic" preload="auto" loop>
     <source src="song.mp3" type="audio/mpeg">
   </audio>
 
   <script>
-    const yesBtn = document.getElementById("yesBtn");
-    const noBtn = document.getElementById("noBtn");
+    // ========= Moving fairy background =========
+    const fairies = document.getElementById("fairies");
+    function spawnFairy(){
+      const f = document.createElement("div");
+      f.className = "fairy";
+      f.textContent = "🧚🏻";
+      f.style.left = Math.floor(Math.random()*100) + "vw";
+      f.style.fontSize = (22 + Math.random()*18) + "px";
+      f.style.animationDuration = (6 + Math.random()*7) + "s";
+      fairies.appendChild(f);
+      setTimeout(() => f.remove(), 14000);
+    }
+    setInterval(spawnFairy, 380);
+
+    // ========= Modal state machine =========
     const overlay = document.getElementById("overlay");
-    const closeBtn = document.getElementById("closeBtn");
+    const mEmoji = document.getElementById("mEmoji");
+    const mTitle = document.getElementById("mTitle");
+    const mTextWrap = document.getElementById("mTextWrap");
+    const mText = document.getElementById("mText");
+    const mButtons = document.getElementById("mButtons");
     const hint = document.getElementById("hint");
+    const note = document.getElementById("note");
     const bgMusic = document.getElementById("bgMusic");
-    const btnArea = document.getElementById("btnArea");
-    const hearts = document.getElementById("hearts");
 
     let noCount = 0;
     let yesScale = 1;
 
-    // Create floating hearts
-    const heartEmojis = ["💗","💖","💘","💕","💞"];
-    function spawnHeart(){
-      const h = document.createElement("div");
-      h.className = "heart-float";
-      h.textContent = heartEmojis[Math.floor(Math.random()*heartEmojis.length)];
-      h.style.left = Math.floor(Math.random()*100) + "vw";
-      h.style.fontSize = (16 + Math.random()*22) + "px";
-      h.style.animationDuration = (6 + Math.random()*6) + "s";
-      hearts.appendChild(h);
-      setTimeout(() => h.remove(), 13000);
-    }
-    setInterval(spawnHeart, 350);
-
-    function openModal(title, text){
-      document.getElementById("modalTitle").textContent = title;
-      document.getElementById("modalText").textContent = text;
-      overlay.style.display = "flex";
+    function setYesScale(v){
+      yesScale = v;
+      document.documentElement.style.setProperty("--yesScale", yesScale);
     }
 
-    function closeModal(){
-      overlay.style.display = "none";
+    function clearUI(){
+      mButtons.innerHTML = "";
+      hint.textContent = "";
+      note.textContent = "";
+      // Reset text area to simple paragraph unless we override with HTML
+      mTextWrap.innerHTML = `<p id="mText"></p>`;
     }
 
-    yesBtn.addEventListener("click", () => {
-      // Confetti celebration
-      confetti({ particleCount: 140, spread: 75, origin: { y: 0.65 } });
-      setTimeout(() => confetti({ particleCount: 90, spread: 55, origin: { y: 0.65 } }), 220);
+    function addButton(label, className, onClick, id=null){
+      const b = document.createElement("button");
+      b.textContent = label;
+      b.className = className;
+      if (id) b.id = id;
+      b.addEventListener("click", onClick);
+      mButtons.appendChild(b);
+      return b;
+    }
 
-      // Try music (will work after user click; if file missing, harmless)
+    // Try play music (safe)
+    function tryPlayMusic(){
       bgMusic.currentTime = 0;
       const p = bgMusic.play();
       if (p) p.catch(() => {});
+    }
 
-      openModal("YAY!!! 💖", "You just made me the happiest person. Happy Valentine’s! 💐");
-    });
+    // Screen 1: Are you free?
+    function screen1(){
+      clearUI();
+      mEmoji.textContent = "💌";
+      mTitle.textContent = "I have something to share…";
+      document.getElementById("mText").textContent = "Are you free right now?";
 
-    noBtn.addEventListener("click", () => {
-      noCount += 1;
+      addButton("Yes", "yes", () => screen3());
+      addButton("No", "no", () => screen2());
+    }
 
-      // YES grows
-      yesScale = Math.min(yesScale + 0.35, 6);
-      document.documentElement.style.setProperty("--yesScale", yesScale);
+    // Screen 2: If she clicks NO first
+    function screen2(){
+      clearUI();
+      mEmoji.textContent = "😤";
+      mTitle.textContent = "No? Really?";
+      document.getElementById("mText").textContent = "I told you it’s something serious. Just press YES.";
 
-      const messages = [
-        "Are you sure? 😳",
-        "Think again… 🤨",
-        "This 'NO' button seems suspicious… 😅",
-        "Ok but the 'YES' is looking very clickable 👀",
-        "You’re making the YES button powerful 💪💖",
-        "At this point… just say YES 😭"
-      ];
-      hint.textContent = messages[(noCount - 1) % messages.length];
+      addButton("Yes", "yes", () => screen3());
+      note.textContent = "You cannot escape this one 🙂";
+    }
 
-      // After a few NO clicks, NO starts dodging inside the button area
-      if (noCount >= 4) {
-        const area = btnArea.getBoundingClientRect();
-        const btn = noBtn.getBoundingClientRect();
+    // Screen 3: Appreciation message + Next
+    function screen3(){
+      clearUI();
+      mEmoji.textContent = "🥺";
+      mTitle.textContent = "Something I want to say…";
+      document.getElementById("mText").textContent =
+        "No matter how hard the time was, you stood for me always. There’s nothing more adorable than you.";
 
-        const maxX = Math.max(0, area.width - btn.width);
-        const maxY = Math.max(0, area.height - btn.height);
+      addButton("Next", "yes", () => screen4());
+      note.textContent = "Tap Next 💗";
+    }
 
-        const x = Math.floor(Math.random() * (maxX + 1));
-        const y = Math.floor(Math.random() * (maxY + 1));
+    // Screen 4: Valentine question with YES/NO logic
+    function screen4(){
+      clearUI();
+      mEmoji.textContent = "💘";
+      mTitle.textContent = "One last question…";
+      document.getElementById("mText").textContent = "Will you be my Valentine?";
 
-        noBtn.style.position = "absolute";
-        noBtn.style.left = x + "px";
-        noBtn.style.top = y + "px";
-      }
-    });
+      noCount = 0;
+      setYesScale(1);
 
-    // Extra: make NO dodge on hover after 5 clicks (desktop only)
-    noBtn.addEventListener("mouseover", () => {
-      if (noCount < 5) return;
-      const area = btnArea.getBoundingClientRect();
-      const btn = noBtn.getBoundingClientRect();
-      const maxX = Math.max(0, area.width - btn.width);
-      const maxY = Math.max(0, area.height - btn.height);
-      const x = Math.floor(Math.random() * (maxX + 1));
-      const y = Math.floor(Math.random() * (maxY + 1));
-      noBtn.style.left = x + "px";
-      noBtn.style.top = y + "px";
-    });
+      addButton("YES 💖", "yes", () => screen5(), "valYesBtn");
+      const noBtn = addButton("NO 🙃", "no", () => {
+        noCount += 1;
 
-    closeBtn.addEventListener("click", closeModal);
-    overlay.addEventListener("click", (e) => {
-      if (e.target === overlay) closeModal();
-    });
+        // Grow YES
+        setYesScale(Math.min(yesScale + 0.35, 6));
+
+        const messages = [
+          "Are you sure? 😳",
+          "Think again… 🤨",
+          "That NO is suspicious… 😅",
+          "The YES is looking very clickable 👀",
+          "You’re making YES powerful 💪💖",
+          "Ok… you know what to do 😌"
+        ];
+        hint.textContent = messages[(noCount - 1) % messages.length];
+
+        // After a few NO clicks, make NO dodge around
+        if (noCount >= 5) {
+          const area = mButtons.getBoundingClientRect();
+          const btn  = noBtn.getBoundingClientRect();
+          const maxX = Math.max(0, area.width - btn.width);
+          const maxY = Math.max(0, area.height - btn.height);
+
+          noBtn.style.position = "absolute";
+          noBtn.style.left = Math.floor(Math.random()*(maxX+1)) + "px";
+          noBtn.style.top  = Math.floor(Math.random()*(maxY+1)) + "px";
+        }
+      });
+
+      note.textContent = "Choose wisely 🙂";
+    }
+
+    // Screen 5: Final love message + ONE PHOTO + MUSIC
+    // ✅ Put final.jpg in the SAME folder as index.html
+    function screen5(){
+      clearUI();
+
+      // Play the song when final YES happens
+      tryPlayMusic();
+
+      mEmoji.textContent = "🥰";
+      mTitle.textContent = "I love you so much";
+
+      // Show one photo + message
+      mTextWrap.innerHTML = `
+        <p style="margin:0 0 12px; line-height:1.5; color:#333; font-weight:700;">
+          Thank you for being there for me always. ❤️
+        </p>
+
+        <img src="final.jpg" alt="final photo" class="finalPhoto" />
+
+        <p style="margin:0; font-weight:900; color:#ff2d55;">
+          Happy Valentine’s Day 💐
+        </p>
+      `;
+
+      addButton("Close 💗", "yes", () => {
+        overlay.style.display = "none";
+        bgMusic.pause(); // optional: stop when closed
+      });
+
+      note.textContent = "This is just for you.";
+    }
+
+    // Start
+    screen1();
   </script>
 </body>
 </html>
