--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     function screen1(){
       clearUI();
       mEmoji.textContent = "💌";
-      mTitle.textContent = "I have something to share…";
+      mTitle.textContent = "I have something very important to share…";
       document.getElementById("mText").textContent = "Are you free right now?";
 
       addButton("Yes", "yes", () => screen3());
@@ -288,7 +288,7 @@
       mEmoji.textContent = "🥺";
       mTitle.textContent = "Something I want to say…";
       document.getElementById("mText").textContent =
-        "No matter how hard the time was, you stood for me always. There’s nothing more adorable than you.";
+        "No matter how hard the time was, you stood for me and i promise i will stay for you. Whatever is going on i will always hold your hand i promise that.There’s nothing more adorable than you.";
 
       addButton("Next", "yes", () => screen4());
       note.textContent = "Tap Next 💗";
@@ -298,8 +298,8 @@
     function screen4(){
       clearUI();
       mEmoji.textContent = "💘";
-      mTitle.textContent = "One last question…";
-      document.getElementById("mText").textContent = "Will you be my Valentine?";
+      mTitle.textContent = "Akhri sawal…";
+      document.getElementById("mText").textContent = "Will you be my Valentine Meri PARRII?";
 
       noCount = 0;
       setYesScale(1);
@@ -346,7 +346,7 @@
       tryPlayMusic();
 
       mEmoji.textContent = "🥰";
-      mTitle.textContent = "I love you so much";
+      mTitle.textContent = "I love you so much meri jaan. I hope you liked it";
 
       // Show one photo + message
       mTextWrap.innerHTML = `
