--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
       width:100%;
       max-height:300px;
       object-fit:cover;
+      object-position: center top;
       border-radius:16px;
       box-shadow: 0 16px 45px rgba(0,0,0,.18);
       margin: 10px 0 12px;
