--- a/index.html
+++ b/index.html
@@ -164,8 +164,12 @@
     .finalPhoto{
       width:100%;
       max-height:300px;
-      object-fit:cover;
-      object-position: center top;
+
+      object-fit: cover;
+
+  /* ✅ Focus on the center of the photo */
+      object-position: center;
+
       border-radius:16px;
       box-shadow: 0 16px 45px rgba(0,0,0,.18);
       margin: 10px 0 12px;
